fix letter-spacing on h1 and main width

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 body h1 {
   text-align: center;
-  letter-spacing: 0.7em;
+  letter-spacing: 0.3em;
   text-transform: uppercase;
 }
 
@@ -19,7 +19,7 @@ body h1 {
   padding: 0.3em;
   margin: 0 auto;
   background: hsl(243deg, 100%, 93%);
-  width: 80%;
+  width: 90%;
   border-radius: 10px 90px 10px 20px;
 }
 
