--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -22,7 +22,7 @@ body
   font-size: 18px
   h1
     text-align: center
-    letter-spacing: 0.7em
+    letter-spacing: 0.3em
     text-transform: uppercase
 
 .main
@@ -30,7 +30,7 @@ body
   padding: 0.3em
   margin: 0 auto
   background: $font-pale-blue-color
-  width: 80%
+  width: 90%
   border-radius: 10px 90px 10px 20px
 
 .form
